<resources>
    <string name="app_name">MovieGiga</string>
    <string name="desc_img_movie_poster">Movie Poster</string>
    <string name="movie_name">Movie Name</string>
    <string name="release_year">2019</string>
    <string name="runtime">Runtime</string>
    <string name="sample_runtime">21:22</string>
    <string name="budget">Budget</string>
    <string name="sample_budget">12,00,00</string>
    <string name="overview">Overview</string>
    <string name="sample_overview">"  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar nec dolor vitae ultrices. Quisque ut libero vitae diam convallis varius. Mauris tincidunt sapien quis purus pharetra tempus. Sed tempus urna ac venenatis tempor. Nulla odio nisi, sagittis nec aliquet lobortis, vulputate et ante. Aenean non nunc vitae orci molestie iaculis vel a magna. Vestibulum tortor nisi, consectetur iaculis massa id, aliquet tincidunt neque. Nam nec placerat sapien. Cras convallis orci mollis diam dapibus consequat. Mauris a eleifend mi.  Morbi consequat lorem eget nisi faucibus, et mollis augue accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec erat elit, sollicitudin ut aliquam quis, imperdiet et libero. Nunc porttitor eget dolor nec efficitur. Cras varius dictum diam nec porta. Curabitur sed orci vitae velit varius eleifend vehicula placerat lectus. Vestibulum efficitur metus nulla, et efficitur orci placerat vitae. Nam consectetur ligula vel lacus viverra, ac ultrices leo fermentum. Aliquam pharetra, tellus vel efficitur tristique, ipsum ante vehicula orci, pharetra mattis nibh nulla eget sem.  Aenean convallis massa eu quam pretium imperdiet. Pellentesque placerat lectus et tempor malesuada. Praesent facilisis ac augue id sagittis. Mauris tellus sem, porttitor eu arcu in, pretium dictum nisl. Curabitur bibendum ut ligula sit amet pretium. Curabitur ac sem non leo convallis finibus non quis ante. Integer ipsum urna, scelerisque non interdum finibus, varius eget risus. Donec a augue eget orci dignissim aliquam. Mauris ornare tincidunt elementum. Nunc varius malesuada metus a vestibulum. Aenean at eros tortor. Suspendisse potenti. Mauris eu commodo mauris. Phasellus eget neque bibendum, pharetra mi ut, vulputate lacus. Donec id eros sed metus consequat mollis non non lectus.  Sed ut egestas est, convallis blandit justo. Ut sit amet lorem nec enim pulvinar mattis. Etiam auctor, augue id condimentum vestibulum, neque ante feugiat nunc, et pulvinar purus ipsum et nisl. Aenean accumsan lectus mauris, id elementum lacus ultrices id. Cras sed rhoncus nisi. Curabitur tincidunt eleifend ante sit amet ornare. Aenean elementum mi eu lectus fringilla eleifend.  Pellentesque nunc ante, tincidunt sit amet eros a, ultrices semper justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mollis et lectus in condimentum. Nulla facilisi. Nunc congue tincidunt dui, sed aliquam enim fermentum non. Nam cursus lorem nec scelerisque vehicula. Mauris at condimentum lorem. Etiam tempor orci blandit elit mollis, at posuere nulla dignissim. Pellentesque rhoncus porta commodo. Mauris tempus ultrices iaculis.  Donec in rutrum mauris. Praesent feugiat suscipit maximus. Phasellus sed tristique sem. Nullam eros odio, convallis lacinia mi ut, convallis suscipit mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed arcu nec justo cursus vehicula nec nec tellus. Curabitur suscipit neque dui, at condimentum felis ultrices non. Cras maximus nisi sem, quis fringilla tortor semper ac.  Cras commodo malesuada sem. Vivamus mollis condimentum hendrerit. Duis ut metus leo. Suspendisse a lacus ut mi porta efficitur. Vestibulum sed velit a risus ultricies vestibulum. Morbi elit massa, euismod ut lobortis nec, ullamcorper quis elit. Nullam feugiat, velit at euismod dapibus, sem ipsum accumsan neque, nec eleifend orci sapien et erat. Aenean pellentesque. "</string>
</resources>