<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12sp"
    tools:context=".movie_details.MovieDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Movie Poster Image-->
            <ImageView
                android:id="@+id/ivPosterImageDetails"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/desc_img_movie_poster"
                android:src="@drawable/img_movie_poster_placeholder" />

            <!--Movie Name Text View-->
            <TextView
                android:id="@+id/tvMovieNameDetails"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="24sp" />

            <!--Movie Release date text view-->
            <TextView
                android:id="@+id/tvMovieReleaseDateDetails"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_year"
                android:textAlignment="center"
                android:textStyle="bold" />

            <!--Movie runtime section-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20sp"
                    android:layout_height="0sp" />

                <TextView
                    android:id="@+id/tvMovieRuntimeDetails"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_runtime"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--Movie budget section-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20sp"
                    android:layout_height="0sp" />

                <TextView
                    android:id="@+id/tvMovieBudgetDetails"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_budget"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="12sp" />

            <!--Movie overview header-->
            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAlignment="center"
                android:textStyle="bold" />

            <!--Movie Overview body-->
            <TextView
                android:id="@+id/tvMovieOverviewDetails"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_overview"
                android:textAlignment="textStart"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>